iac/vpc.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: VPC

Mappings:
    SubnetConfig:
        VPC:
            CIDR: "10.0.0.0/16"
        Public1:
            CIDR: "10.0.0.0/19"
        Public2:
            CIDR: "10.0.32.0/19"
        Private1:
            CIDR: "10.0.64.0/19"
        Private2:
            CIDR: "10.0.96.0/19"

Resources:
    # VPC
    VPC:
        Type: AWS::EC2::VPC
        Properties:
            EnableDnsSupport: true
            EnableDnsHostnames: true
            CidrBlock: !FindInMap ["SubnetConfig", "VPC", "CIDR"]
            Tags:
                - Key: Name
                  Value: audio-recorder-VPC

    # VPC Internet Gateway and Attachment
    VPCInternetGateway:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags:
                - Key: Name
                  Value: Whereby Assistant Audio Recorder VPC Internet Gateway

    VPCInternetGatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            VpcId: !Ref "VPC"
            InternetGatewayId: !Ref VPCInternetGateway

    # Public Subnet
    PublicSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
            AvailabilityZone:
                Fn::Select:
                    - 0
                    - Fn::GetAZs: { Ref: "AWS::Region" }
            VpcId: !Ref "VPC"
            CidrBlock: !FindInMap ["SubnetConfig", "Public1", "CIDR"]
            MapPublicIpOnLaunch: true
            Tags:
                - Key: Name
                  Value: Whereby Assistant Audio Recorder Public Subnet 1

    PublicSubnet1RouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
                - Key: Name
                  Value: Whereby Assistant Audio Recorder Public Subnet 1 Route Table

    PublicSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicSubnet1RouteTable
            SubnetId: !Ref PublicSubnet1

    PublicSubnet1DefaultRoute:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId:
                Ref: PublicSubnet1RouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref VPCInternetGateway
        DependsOn:
            - VPC

    PublicSubnet1EIP:
        Type: AWS::EC2::EIP
        Properties:
            Domain: vpc

    PublicSubnet1NatGateway:
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId: !GetAtt PublicSubnet1EIP.AllocationId
            SubnetId:
                Ref: PublicSubnet1
            Tags:
                - Key: Name
                  Value: Whereby Assistant Audio Recorder Public Subnet 1 Nat Gateway

    PublicSubnet2:
        Type: AWS::EC2::Subnet
        Properties:
            AvailabilityZone:
                Fn::Select:
                    - 1
                    - Fn::GetAZs: { Ref: "AWS::Region" }
            VpcId: !Ref "VPC"
            CidrBlock: !FindInMap ["SubnetConfig", "Public2", "CIDR"]
            MapPublicIpOnLaunch: true
            Tags:
                - Key: Name
                  Value: Whereby Assistant Audio Recorder Public Subnet 2

    PublicSubnet2RouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId:
                Ref: "VPC"
            Tags:
                - Key: Name
                  Value: Whereby Assistant Audio Recorder Public Subnet 2 Route Table

    PublicSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicSubnet2RouteTable
            SubnetId: !Ref PublicSubnet2

    PublicSubnet2DefaultRoute:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId:
                Ref: PublicSubnet2RouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref VPCInternetGateway
        DependsOn:
            - VPC

    PublicSubnet2EIP:
        Type: AWS::EC2::EIP
        Properties:
            Domain: vpc

    PublicSubnet2NatGateway:
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId: !GetAtt PublicSubnet2EIP.AllocationId
            SubnetId: !Ref PublicSubnet2
            Tags:
                - Key: Name
                  Value: Whereby Assistant Audio Recorder Public Subnet 2 Nat Gateway

    # Private Subnets
    PrivateSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
            AvailabilityZone:
                Fn::Select:
                    - 0
                    - Fn::GetAZs: { Ref: "AWS::Region" }
            VpcId: !Ref "VPC"
            CidrBlock: !FindInMap ["SubnetConfig", "Private1", "CIDR"]
            Tags:
                - Key: Name
                  Value: audio-recorder-Subnet-One

    Private1RouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
                - Key: Name
                  Value: audio-recorder-rt-1

    Private1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref Private1RouteTable
            SubnetId: !Ref PrivateSubnet1

    PrivateSubnet1DefaultRoute:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref Private1RouteTable
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref PublicSubnet1NatGateway

    PrivateSubnet2:
        Type: AWS::EC2::Subnet
        Properties:
            AvailabilityZone:
                Fn::Select:
                    - 1
                    - Fn::GetAZs: { Ref: "AWS::Region" }
            VpcId: !Ref "VPC"
            CidrBlock: !FindInMap ["SubnetConfig", "Private2", "CIDR"]
            Tags:
                - Key: Name
                  Value: audio-recorder-Subnet-Two

    Private2RouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
                - Key: Name
                  Value: audio-recorder-rt-2

    Private2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref Private2RouteTable
            SubnetId: !Ref PrivateSubnet2

    PrivateSubnet2DefaultRoute:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref Private2RouteTable
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref PublicSubnet2NatGateway

    # Load Balancer Configuration
    PublicLoadBalancer:
        DependsOn: VPCInternetGateway
        Type: AWS::ElasticLoadBalancingV2::LoadBalancer
        Properties:
            Name: public-http-lb
            Scheme: internet-facing
            SecurityGroups:
                - !Ref PublicHTTPSecurityGroup
            Subnets:
                - !Ref PublicSubnet1
                - !Ref PublicSubnet2
            Type: application

    PublicLBTargetGroup:
        Type: AWS::ElasticLoadBalancingV2::TargetGroup
        Properties:
            #  Check if your application is healthy within 20 = 10*2 seconds, compared to 2.5 mins = 30*5 seconds.
            HealthCheckIntervalSeconds: 10 # Default is 30.
            HealthyThresholdCount: 2 # Default is 5.
            HealthCheckTimeoutSeconds: 5
            Name: public-audio-recorder-tg
            VpcId: !Ref VPC
            Protocol: HTTP
            TargetGroupAttributes:
                - Key: deregistration_delay.timeout_seconds
                  Value: 0
            Port: 80
            TargetType: ip
            IpAddressType: ipv4

    PublicLBListener:
        Type: "AWS::ElasticLoadBalancingV2::Listener"
        Properties:
            DefaultActions:
                - Type: forward
                  TargetGroupArn: !Ref PublicLBTargetGroup
            LoadBalancerArn: !Ref PublicLoadBalancer
            Port: 80
            Protocol: HTTP

    PublicHTTPSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupDescription: HTTP access to the public facing load balancer
            SecurityGroupEgress:
                - CidrIp: "0.0.0.0/0"
                  Description: Allow all outbound traffic by default
                  IpProtocol: "-1"
            SecurityGroupIngress:
                # Allow traffic from services on port 80
                - CidrIp: 0.0.0.0/0
                  Description: Allow traffic from services on port 80
                  FromPort: 80
                  IpProtocol: tcp
                  ToPort: 80
            VpcId: !Ref VPC

    ApplicationLBSecurityGroupIngress:
        Type: AWS::EC2::SecurityGroupIngress
        Properties:
            Description: Allow from anyone on port 80
            IpProtocol: tcp
            CidrIp: 0.0.0.0/0
            FromPort: 80
            ToPort: 80
            GroupId: !Ref PublicHTTPSecurityGroup

Outputs:
    PublicLBFQDN:
        Value: !Join
            - ""
            - - "http://"
              - !GetAtt PublicLoadBalancer.DNSName
              - "/"
    VPCID:
        Value: !Ref VPC
    PublicSubnet1:
        Value: !Ref PublicSubnet1
    PublicSubnet2:
        Value: !Ref PublicSubnet2
    PrivateSubnet1:
        Value: !Ref PrivateSubnet1
    PrivateSubnet2:
        Value: !Ref PrivateSubnet2
    LB:
        Value: !Ref PublicLBTargetGroup
    SG:
        Value: !Ref PublicHTTPSecurityGroup
